--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#dd4422</color>
+    <color name="colorPrimaryDark">#dd8822</color>
+    <color name="colorAccent">#FF8822</color>
+    <color name="yellow">#FFDD00</color>
+    <color name="white">#FFFFFF</color>
 </resources>
