--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         style="@android:style/Widget.DeviceDefault.ScrollView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/twelveHrBtn"
+        app:layout_constraintBottom_toTopOf="@+id/twleveHrBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -56,7 +56,7 @@
 
 
     <Button
-        android:id="@+id/twelveHrBtn"
+        android:id="@+id/twleveHrBtn"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="0dp"
         android:layout_height="40dp"
@@ -79,6 +79,6 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/twelveHrBtn" />
+        app:layout_constraintStart_toEndOf="@+id/twleveHrBtn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
