--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#dd4422</color>
-    <color name="colorPrimaryDark">#dd8822</color>
+    <color name="colorPrimary">#FF8822</color>
+    <color name="colorPrimaryDark">#dd4422</color>
     <color name="colorAccent">#FF8822</color>
     <color name="yellow">#FFDD00</color>
     <color name="white">#FFFFFF</color>
